# code_sample_data_processing_pipelines

./: .gitattributes  CMakeLists.txt  copy_deflate.cpp  copy_deflate_co.cpp  copy_inflate.cpp  execute_step.hpp  execute_step_co.hpp  file_sink.cpp  file_sink.hpp  file_source.cpp  file_source.hpp  filter_deflate.cpp  filter_deflate.hpp  filter_id.hpp  filter_inflate.cpp  filter_inflate.hpp  mt_ring_buffer.cpp  mt_ring_buffer.hpp  mt_ring_buffer.t.cpp  op_state.hpp  pipe_syntax_operator.hpp  pipeline_concepts.hpp  process_return.hpp  ring_buffer.cpp  ring_buffer.hpp  ring_buffer.t.cpp
samples/: producer_consumer.cpp  symmetric_transfer.cpp
